--- a/style.css
+++ b/style.css
@@ -1,3 +1,189 @@
+*{
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 0.1em;
+    background-color: #F7EBED;
+}
+
+header, footer{
+    background-color: white;
+    padding: 10px 60px;
+    margin: 30px;
+    border-radius: 10px;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 80px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+nav{
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.2em;
+}
+
+nav a{
+    color: #fc9caf;
+}
+
 h1{
-    color: aqua;
+    font-family: 'Playfair Display', serif;
+    font-size: 2em;
+}
+
+h2{
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    font-weight: 100;
+    font-size: 1.8em;
+}
+
+nav a, nav div{
+    background-color: white;
+}
+
+.intro_titles{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fc9caf;
+}
+
+.intro_content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+    border-radius: 10px;
+}
+
+#intro_photo, #bio-photo{
+    width: 600px;
+    height: auto;
+    border-radius: 10px;
+    margin-left: 100px;
+}
+
+.intro_titles, .intro_content{
+    margin: 30px;
+}
+
+.intro_text{
+    text-align: center;
+}
+
+.intro_content, .intro_text, .intro_text p, .intro_content a, footer a, footer p, footer img, footer div {
+    background-color: white;
+}
+
+.button {
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height: 23px;
+  outline: none;
+  padding: .75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  /* added myself */
+  margin-top: 30px;
+}
+
+.button:hover {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.button:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+.bio{
+    display: flex;
+    margin: 30px;
+}
+
+.bio-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.creations{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 500px 500px 500px;
+    gap: 15px;
+}
+
+.creations img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+border-radius: 10px;
+}
+
+.page-creations{
+    margin: 30px;
+}
+
+.page-creations h1{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.saveurs, .saveurs h2, .saveurs ul, .saveurs li{
+    background-color: white;
+}
+
+.saveurs{
+    padding: 20px 50px;
+    border-radius: 10px;
+}
+
+.gateaux h2{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.page-creations .button{
+    display: flex;
+    justify-content: center;
 }
