--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav a, nav div{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fc9caf;
+    /* color: #fc9caf; */
 }
 
 .intro_content{
@@ -71,7 +71,7 @@ nav a, nav div{
     border-radius: 10px;
 }
 
-#intro_photo, #bio-photo{
+#intro_photo{
     width: 600px;
     height: auto;
     border-radius: 10px;
@@ -134,6 +134,7 @@ nav a, nav div{
 
 .bio{
     display: flex;
+    align-items: center;
     margin: 30px;
 }
 
@@ -142,6 +143,13 @@ nav a, nav div{
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+#bio-photo{
+    width: auto;
+    height: 400px;
+    border-radius: 10px;
+    margin-left: 100px;
 }
 
 .creations{
