--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+/* ----- General ----- */
+
 *{
     font-family: 'Raleway', sans-serif;
     letter-spacing: 0.1em;
     background-color: #F7EBED;
+}
+
+header, footer, nav, nav a, nav div, .intro_content, .intro_text, .intro_text p, .intro_content a, footer a, footer p, footer img, footer div, .saveurs, .saveurs h2, .saveurs ul, .saveurs li, .saveurs span, .info, .info label, .project, .project label, input, legend, textarea, form{
+    background-color: white;
 }
 
 body{
@@ -11,14 +17,14 @@ body{
 }
 
 header{
-    background-color: white;
+    /* background-color: white; */
     padding: 10px 60px;
     margin: 30px 30px 0px 30px;
     border-radius: 10px;
 }
 
 footer{
-    background-color: white;
+    /* background-color: white; */
     padding: 10px 60px;
     margin-left: 30px;
     margin-right: 30px;
@@ -35,12 +41,12 @@ a{
     text-decoration: none;
 }
 
-a:hover{
+a:not(.insta):hover{
     text-decoration: underline;
 }
 
 nav{
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -63,16 +69,61 @@ h2{
     font-size: 1.8em;
 }
 
-nav a, nav div{
+/* nav a, nav div{
     background-color: white;
+} */
+
+/* ----- Buttons ----- */
+
+.button {
+    align-self: center;
+    background-color: #fff;
+    background-image: none;
+    background-position: 0 90%;
+    background-repeat: repeat no-repeat;
+    background-size: 4px 3px;
+    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+    box-sizing: border-box;
+    color: #41403e;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Neucha, sans-serif;
+    font-size: 1rem;
+    line-height: 23px;
+    outline: none;
+    padding: .75rem;
+    text-decoration: none;
+    transition: all 235ms ease-in-out;
+    border-bottom-left-radius: 15px 255px;
+    border-bottom-right-radius: 225px 15px;
+    border-top-left-radius: 255px 15px;
+    border-top-right-radius: 15px 225px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    /* added myself */
+    margin-top: 30px;
 }
+
+.button:hover {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+    transform: translate3d(0, 2px, 0);
+}
+
+.button:focus {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+/* ----- Home page ----- */
 
 .intro_titles{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* color: #fc9caf; */
 }
 
 .intro_content{
@@ -98,51 +149,11 @@ nav a, nav div{
     text-align: center;
 }
 
-.intro_content, .intro_text, .intro_text p, .intro_content a, footer a, footer p, footer img, footer div {
+/* .intro_content, .intro_text, .intro_text p, .intro_content a, footer a, footer p, footer img, footer div {
     background-color: white;
-}
+} */
 
-.button {
-  align-self: center;
-  background-color: #fff;
-  background-image: none;
-  background-position: 0 90%;
-  background-repeat: repeat no-repeat;
-  background-size: 4px 3px;
-  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
-  border-style: solid;
-  border-width: 2px;
-  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
-  box-sizing: border-box;
-  color: #41403e;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Neucha, sans-serif;
-  font-size: 1rem;
-  line-height: 23px;
-  outline: none;
-  padding: .75rem;
-  text-decoration: none;
-  transition: all 235ms ease-in-out;
-  border-bottom-left-radius: 15px 255px;
-  border-bottom-right-radius: 225px 15px;
-  border-top-left-radius: 255px 15px;
-  border-top-right-radius: 15px 225px;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  /* added myself */
-  margin-top: 30px;
-}
-
-.button:hover {
-  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
-  transform: translate3d(0, 2px, 0);
-}
-
-.button:focus {
-  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-}
+/* ----- About page ----- */
 
 .bio{
     display: flex;
@@ -164,6 +175,8 @@ nav a, nav div{
     margin-left: 100px;
 }
 
+/* ----- Creations page ----- */
+
 .creations{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -172,10 +185,32 @@ nav a, nav div{
 }
 
 .creations img {
-width: 100%;
-height: 100%;
-object-fit: cover;
-border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.box{
+    position: relative;
+}
+
+.bigger-picture{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    background-color: rgba(247, 235, 237, 0.7);
+    display: none;
+}
+
+.box:hover .bigger-picture{
+    display: flex;
 }
 
 .page-creations{
@@ -187,13 +222,17 @@ border-radius: 10px;
     margin-bottom: 50px;
 }
 
-.saveurs, .saveurs h2, .saveurs ul, .saveurs li{
+/* .saveurs, .saveurs h2, .saveurs ul, .saveurs li, .saveurs span{
     background-color: white;
-}
+} */
 
 .saveurs{
     padding: 20px 50px;
     border-radius: 10px;
+}
+
+.saveurs span, .business_info span{
+    text-decoration: underline;
 }
 
 .gateaux h2{
@@ -201,6 +240,8 @@ border-radius: 10px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
+/* ----- Prices page ----- */
 
 .prices{
     display: flex;
@@ -233,24 +274,32 @@ border-radius: 10px;
     font-weight: 700;
 }
 
-.order{
+.prices-table td:not(.first):hover{
+    background-color: rgba(252, 156, 175, 0.7);
+}
+
+/* ----- Contact page ----- */
+
+.order, .form-title{
     text-align: center;
     margin-top: 20px;
 }
 
-.info, .info label, .project, .project label, input, legend, textarea{
+/* .info, .info label, .project, .project label, input, legend, textarea, form{
     background-color: white;
-}
+} */
 
 legend{
     font-size: larger;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .contact{
     display: flex;
-    background-color: #fc9caf;
+    justify-content: space-around;
+    align-items: center;
 }
 
 form{
@@ -273,8 +322,13 @@ textarea{
     height: 150px;
 }
 
+fieldset, input{
+    border: 0px;
+}
+
+/* ----- Thank you page ----- */
+
 .ty{
     text-align: center;
     margin-top: 80px;
 }
-
