--- a/style.css
+++ b/style.css
@@ -28,10 +28,9 @@ footer{
     padding: 10px 60px;
     margin-left: 30px;
     margin-right: 30px;
-    flex-grow: 1;
     border-radius: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-top: 80px;
 }
@@ -328,7 +327,10 @@ fieldset, input{
 
 /* ----- Thank you page ----- */
 
-.ty{
-    text-align: center;
-    margin-top: 80px;
+.fill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
 }
